# vstgui

vstgui/lib/: CMakeLists.txt  algorithm.h  vstguifwd.h
vstgui/lib/platform/win32/: win32dragging.cpp  win32frame.cpp  win32openglview.cpp  win32support.cpp
vstgui/standalone/: CMakeLists.txt
vstgui/standalone/cmake/modules/: vstgui_add_executable.cmake
vstgui/standalone/examples/mandelbrot/: CMakeLists.txt
vstgui/standalone/examples/minesweeper/: CMakeLists.txt
vstgui/standalone/examples/minesweeper/source/: highscorelist.h  highscores.h  model.cpp
vstgui/standalone/examples/simple_standalone/: CMakeLists.txt
vstgui/standalone/examples/standalone/: CMakeLists.txt
vstgui/standalone/source/: uidescriptionwindowcontroller.cpp
vstgui/standalone/source/platform/win32/: win32application.cpp  win32async.cpp  win32window.cpp
vstgui/tests/base64codecspeed/: CMakeLists.txt
vstgui/tests/gfxtest/: CMakeLists.txt
vstgui/tests/gfxtest/resource/: gfxtest.rc
vstgui/tests/uidescriptioneditorapp/: CMakeLists.txt
vstgui/tests/unittest/: CMakeLists.txt  unittests.cpp
vstgui/tools/imagestitcher/: CMakeLists.txt
vstgui/tools/imagestitcher/source/: documentcontroller.cpp
vstgui/tools/uidesccompressor/: CMakeLists.txt
vstgui/uidescription/: CMakeLists.txt
